# ApproxHPVM_Honk_version

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fri/matevzfa/approxhpvmdemo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/si/fri/matevzfa/approxhpvmdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/si/fri/matevzfa/approxhpvmdemo/: AdaptationEngine.kt  App.kt  AppModule.kt  ApproxHPVMWrapper.kt  ApproxHVPMWrapper.kt  HARClassificationLogger.kt  HARClassifier.kt  HARSensorSampler.kt  HARService.kt  HPVMWrapper.kt  KalmanAdaptation.kt  MainActivity.kt  StateAdaptation.kt  TraceAdaptation.kt  utility.kt
app/src/main/java/si/fri/matevzfa/approxhpvmdemo/adaptation/: AdaptationEngine.kt  ArpAdaptation.kt  HARConfidenceAdaptation.kt  KalmanAdaptation.kt  NaiveAdaptation.kt  NoAdaptation.kt  StateAdaptation.kt
app/src/main/java/si/fri/matevzfa/approxhpvmdemo/arp/: Filter.kt  (+5 more)
app/src/main/res/layout/: activity_arpactivity.xml  activity_data_import.xml  activity_har.xml  activity_main.xml  activity_new_main.xml  activity_trace_adaptation.xml  fragment_detect_screen.xml  fragment_start_screen.xml  text_row_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fri/matevzfa/approxhpvmdemo/: ExampleUnitTest.kt
app/src/test/java/si/fri/matevzfa/approxhpvmdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
